# hyperfhir

./: .env  .gitignore  .test.env  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2a25e073651d_first_revision.py
hyperfhir/: __init__.py  app.py  middleware.py
hyperfhir/api/: deps.py  tasks.py
hyperfhir/api/v1/: __init__.py  routes.py
hyperfhir/api/v1/endpoints/fhir/: rest.py
hyperfhir/core/: config.py  exception_handlers.py  responses.py  utils.py
hyperfhir/db/: __init__.py  es.py  main.py
hyperfhir/models/: __init__.py  base.py  crud.py  resource.py
tests/: _utils.py  conftest.py  fixtures.py  test_middleware.py  test_model_crud.py
tests/api/v1/rest/: test_create.py  test_endpoints.py  test_search.py
var/postgresql/data/pgdata/: postmaster.pid
var/postgresql/data/pgdata/base/13454/: 2619
var/postgresql/data/pgdata/base/16384/: 1247  1249  1259  2224  24577  24580  24593  24601  24602  24604  24605  24606  24614  24615  24617  24619  24620  24621  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  (+6 more)
var/postgresql/data/pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
var/postgresql/data/pgdata/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
