[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hyperfhir"
author = "Md Nazrul Islam"
author-email = "email2nazrul@gmail.com"
home-page = "https://github.com/nazrulworld/hyperfhir"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP"
]
requires = [
    "fastapi",
    "pydantic[email,dotenv]>=1.7.2",
    "fhirpath>=0.10.2",
    "elasticsearch[async]>7.8.0,<8.0.0",
    "databases[postgresql]",
    "uvicorn",
    "tenacity",
    "graphene",
    "gunicorn",
    "orjson",
    "python-multipart"

]
description-file = "README.md"
requires-python = ">=3.7"

[tool.flit.metadata.urls]
Documentation = "https://nazrul.me/hyperfhir/"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=6.1.1,<7.0.0",
    "pytest-cov",
    "pytest-asyncio",
    "async-asgi-testclient",
    "pytest-mock",
    "pytest-dotenv",
    "docker",
    "requests",
    "pytest-docker-fixtures"
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "markdown-include"
]
dev = [
    "mypy",
    "black",
    "isort",
    "autoflake",
    "flake8",
	"flake8-isort",
    "flake8-bugbear",
    "vulture",
    "pytz"
]
all = [
    "pytest >=6.1.1,<7.0.0",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-dotenv",
    "async-asgi-testclient",
    "docker",
    "requests",
    "pytest-docker-fixtures",
    "mypy",
    "black",
    "isort",
    "autoflake",
    "flake8",
    "flake8-isort",
    "flake8-bugbear",
    "vulture",
    "pytz"
]

[requires]
python_version = ">=3.7"

[pipenv]
allow_prereleases = true

[tool.pytest]
addopts = "-ra -q --envfile .test.env"
testpaths = [
    "tests"
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
